--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 bcrypt==3.2.0
+certifi==2021.5.30
 cffi==1.14.6
 click==8.0.1
+cloudinary==1.26.0
 Flask==2.0.1
+Flask-Cors==3.0.10
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.1
@@ -9,4 +12,5 @@ MarkupSafe==2.0.1
 psycopg2==2.9.1
 pycparser==2.20
 six==1.16.0
+urllib3==1.26.6
 Werkzeug==2.0.1
